crates/reef-tui/tests/snapshots/ui_snapshots__settings_page_editing_editor_command.snap
---
source: crates/reef-tui/tests/ui_snapshots.rs
expression: output
---
┌ ⚙ Settings ──────────────────────────────────────────────────────────────────┐
│                                                                              │
│  GENERAL                                                                     │
│     Theme                                    [auto]                          │
│                                                                              │
│  EXTERNAL EDITOR                                                             │
│   › Editor command                           (unset — uses $VISUAL / $EDITO  │
│                                                                              │
│  GIT DIFF                                                                    │
│     Diff layout                              [unified]                       │
│     Diff mode                                [compact]                       │
│     Status sidebar — tree view               [off]                           │
│                                                                              │
│  COMMIT DETAIL                                                               │
│     Commit diff layout                       [unified]                       │
│     Commit diff mode                         [compact]                       │
│     Commit files — tree view                 [off]                           │
│                                                                              │
│  CODE NAVIGATION                                                             │
│     Navigation Peek mode                     [expanded]                      │
│     Rust                                     [RA]  Not installed             │
│    › nvim --clean                                                            │
│    Enter save · Esc cancel                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
