crates/reef-tui/tests/snapshots/ui_snapshots__tree_context_menu.snap
---
source: crates/reef-tui/tests/ui_snapshots.rs
assertion_line: 230
expression: output
---
 reef  [TMPDIR]  ⎇ master
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
 +   +   ⊟             │
 ▸ src ●               │
   README.md           │
                       │
    ┌──────────────────────┐
    │  Cut                 │
    │  Copy                │
    │  Paste               │
    │  Duplicate           │              Select a file to preview
    │  New File            │
    │  New Folder          │
    │  Rename              │
    │  Delete              │
    │  Copy Path           │
    │  Copy Relative Path  │
    │  Reveal in Finder    │
    └──────────────────────┘
 SSH           ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
