crates/reef-tui/tests/snapshots/ui_snapshots__tree_edit_row_new_file.snap
---
source: crates/reef-tui/tests/ui_snapshots.rs
assertion_line: 197
expression: output
---
 reef  [TMPDIR]  ⎇ master
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
 +   +   ⊟             │
 ▸ src ●               │
      New file name…   │
   README.md           │
                       │
                       │
                       │
                       │
                       │                  Select a file to preview
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
 SSH           ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
