crates/reef-tui/tests/snapshots/ui_snapshots__video_card_no_playback.snap
---
source: crates/reef-tui/tests/ui_snapshots.rs
expression: output
---
 reef  [TMPDIR]  ⎇ (detached)
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
 +   +   ⊟             │ clip.mp4
   clip.mp4 U          │ ──────────────────────────────────────────────────────
                       │ video/mp4 · 12 B
                       │
                       │
                       │
                       │
                       │
                       │
                       │
                       │      inline playback unavailable in this terminal
                       │
                       │
                       │
                       │
                       │
                       │
 SSH           ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
