crates/reef-tui/tests/snapshots/ui_snapshots__with_staged_and_unstaged.snap
---
source: crates/reef-tui/tests/ui_snapshots.rs
assertion_line: 126
expression: output
---
 reef  [TMPDIR]  ⎇ master
 📁  Files │ 🔎  Search │ ⎇ Git │ ⑂ Graph        ⊟  1:Files 2:Search 3:Git 4:Graph
  ┌ Message (commit sta│
  │                    │
  └                    │
    ✓ Commit   (Ctrl+En│
                       │
 View: list            │
                       │
 ⌄ Changes  2 Stage all│
   new.txt +1 U ↗ + ↺  │                 Select a file to view diff
   ...t +1 -1 M ↗ + ↺  │
                       │
                       │
                       │
                       │
                       │
                       │
                       │
 SSH           ⚙  q:quit Tab:switch s:stage u:unstage r:refresh h:help  [Files]
